--- a/index.ipynb
+++ b/index.ipynb
@@ -7,16 +7,15 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from jaume_nbdev.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
-    "\n",
-    "> Summary description here."
+    "# Jaume nbdev\n",
+    "> Following the tutorial based on github"
    ]
   },
   {
@@ -62,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello Jaume!'"
       ]
      },
      "execution_count": null,
@@ -71,7 +70,27 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello ('Jaume')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Otro!'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello ('Otro')"
    ]
   },
   {
